RESOLVED FIXED63798
Accessing ShadowRoot.nodeList causes an assertion failure
https://bugs.webkit.org/show_bug.cgi?id=63798
Summary Accessing ShadowRoot.nodeList causes an assertion failure
Hajime Morrita
Reported 2011-07-01 02:50:05 PDT
Reproduction and will come shortly
Attachments
Patch (5.45 KB, patch)
2011-07-04 00:23 PDT, Hajime Morrita
no flags
Patch (5.45 KB, patch)
2011-07-04 17:57 PDT, Hajime Morrita
no flags
Hajime Morrita
Comment 1 2011-07-04 00:23:34 PDT
Hajime Morrita
Comment 2 2011-07-04 17:57:12 PDT
Hajime Morrita
Comment 3 2011-07-04 17:59:35 PDT
Comment on attachment 99660 [details] Patch Oops.
Hajime Morrita
Comment 4 2011-07-04 18:12:10 PDT
Note You need to log in before you can comment on or make changes to this bug.