2011-07-04  MORITA Hajime  <morrita@google.com>

Accessing ShadowRoot.nodeList causes an assertion failure.
        http://webkit.org/b/63798

        Reviewed by Dimitri Glazkov.

        * fast/dom/shadow/shadow-root-node-list-expected.txt: Added.
        * fast/dom/shadow/shadow-root-node-list.html: Added.
2011-07-04  MORITA Hajime  <morrita@google.com>

        Accessing ShadowRoot.nodeList causes an assertion failure.
        http://webkit.org/b/63798

        The TreeScope destructor did clear the reference to TreeScope,
        then the Node destructor accessing treeScope(), which results
        an inconsistent state during the NodeList cache cleanup.

        This change clears NodeList cache during the TreeScope destructor.
        The Node destructor no longer does problematic NodeList cache
        manipulation.

        Test: fast/dom/shadow/shadow-root-node-list.html

        Reviewed by Dimitri Glazkov.

        * dom/Node.cpp:
        (WebCore::Node::~Node):
        (WebCore::Node::clearRareData):
        * dom/Node.h:
        * dom/TreeScope.cpp:
        (WebCore::TreeScope::~TreeScope):

Canonical link: https://commits.webkit.org/79644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90378 268f45cc-cd09-0410-ab3c-d52691b4dbfc